--- a/admin/index.html
+++ b/admin/index.html
@@ -39,11 +39,10 @@
         "queryusers": {"de": "abfragen", "en": "query"},
         "geofences": {"de": "Geofences", "en": "Geofences"},
         "description": {"de": "Beschreibung", "en": "description"},
-        "center_lat": {"de": "Breitengrad (dezimal)", "en": "Latitude (decimal)"},
-        "center_long": {"de": "Längengrad (dezimal)", "en": "Longitude (decimal)"},
+        "center_lat": {"de": "Zentrum Breitengrad (dezimal)", "en": "Center Latitude (decimal)"},
+        "center_long": {"de": "Zentrum Längengrad (dezimal)", "en": "Center Longitude (decimal)"},
         "radius": {"de": "Radius (m)", "en": "radius (m)"},
-        "userid": {"de": "Person", "en": "user"},
-        "trueonin": {"de": "Bei Eintritt wahr?", "en": "true on entry?"},
+        "userid": {"de": "Benutzer ID", "en": "user id"},
         "on save adapter restarts with new config immediately": {
           "de": "Beim Speichern von Einstellungen wird der Adapter sofort neu gestartet.",
           "ru": "Сразу после сохранения настроек драйвер перезапуститься с новыми значениями"
