added support for iobroker.places-adapter (untested)

--- a/admin/index.html
+++ b/admin/index.html
@@ -35,6 +35,7 @@
         "google_username": {"de": "Benutzername", "en": "Username"},
         "google_password": {"de": "Passwort", "en": "Password"},
         "google_polling_interval": {"de": "Abfrageintervall (s)", "en": "Polling interval (s)"},
+        "places_adapter": {"de": "Places-Instanz", "en": "Places instance"},
         "search": {"de": "Suche", "en": "search"},
         "queryusers": {"de": "abfragen", "en": "query"},
         "geofences": {"de": "Geofences", "en": "Geofences"},
@@ -140,6 +141,7 @@
         <tr><td class="translate">google_username</td><td><input class="value" id="google_username"></td></tr>
         <tr><td class="translate">google_password</td><td><input class="value" type="password" id="google_password"/></td></tr>
         <tr><td class="translate">google_polling_interval</td><td><input class="value" id="google_polling_interval"/></td></tr>
+        <tr><td class="translate">places_adapter</td><td><input class="value" id="places_adapter"/></td></tr>
     </table>
     <h4 class="translate">geofences</h4>
     <div id="values" style="width: 100%; height: calc(100% - 300px)">
