improved login procedure minimum polling interval must be greater than 30s

--- a/admin/index.html
+++ b/admin/index.html
@@ -122,6 +122,7 @@
         <tr><td class="translate">google_password</td><td><input class="value" type="password" id="google_password"/></td></tr>
         <tr><td class="translate">google_polling_interval</td><td><input class="value" id="google_polling_interval"/></td></tr>
         <tr><td class="translate">places_adapter</td><td><input class="value" id="places_adapter"/></td></tr>
+        <tr><td class="translate">google_verify_email</td><td><input class="value" id="google_verify_email"/></td></tr>
     </table>
     <h4 class="translate">geofences</h4>
     <div id="values" style="width: 100%; height: calc(100% - 300px)">
