preparations for new fence management

--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -270,6 +270,7 @@
                             <th data-name="center_long" class="translate">center_long</th>
                             <th data-name="radius" class="translate">radius</th>
                             <th data-name="userid" data-type="select" data-options="press search" class="translate">user</th>
+                            <th data-name="fenceid" class="translate">fenceid</th>
                             <th data-buttons="delete" style="width: 40px"></th>
                         </tr>
                         </thead>
