--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -226,23 +226,23 @@
             <div class="row">
                 <div class="input-field col s12 m8 l4">
                     <input class="value" id="google_username" type="text">
-                    <label for="google_username" class="translate">google_username</label>
+                    <label for="google_username" class="translate active">google_username</label>
                 </div>
                 <div class="input-field col s12 m8 l4">
                     <input class="value" id="google_password" type="password">
-                    <label for="google_password" class="translate">google_password</label>
+                    <label for="google_password" class="translate active">google_password</label>
                 </div>
             </div>
             <div class="row">
                 <div class="input-field col s12 m8 l4">
                     <input class="value" id="google_verify_email" type="text">
-                    <label for="google_verify_email" class="translate">google_verify_email</label>
+                    <label for="google_verify_email" class="translate active">google_verify_email</label>
                 </div>
             </div>
             <div class="row">
                 <div class="input-field col s12 m8 l2">
                     <input class="value" id="google_polling_interval" size="5" maxlength="5" type="number">
-                    <label for="google_polling_interval" class="translate">google_polling_interval</label>
+                    <label for="google_polling_interval" class="translate active">google_polling_interval</label>
                 </div>
             </div>
             <div class="row">
