--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -102,7 +102,7 @@
               $(elem).append('<option value="' + n + '">' + n + '</option>');
             }
           }
-          $(elem).append('<option value="" class="translate">none</option>');
+          $(elem).append('<option value="">none</option>');
           $(elem).val(current);
           $(elem).select() // update combo box
         });
@@ -220,9 +220,23 @@
               if(conn_status === true) {
                 showMessage(_('Connection successful!'), 'Connection test', 'info');
               } else {
-                showMessage(_('Connection failed.'), 'Connection test', 'info');
+                showMessage(_('Connection failed. Use the proxy method to retrieve the cookie.'), 'Connection test', 'info');
               }
             });
+          });
+        });
+
+        $('#btn_open_proxy_website').on('click', function () {
+          let active = false;
+          getIsAdapterAlive(function (isAlive) {
+            if (isAlive || common.enabled) {
+              active = true;
+            }
+
+            if (!active) {
+              showMessage(_('Enable adapter first'), 'Warning', 'info');
+              return
+            }
           });
         });
 
@@ -271,30 +285,48 @@
                 </div>
             </div>
             <div class="row">
-                <div class="input-field col s12 m8 l4">
+                <div class="col s12 m8 l4 title translate">Google-Account Credentials</div>
+            </div>
+            <div class="row">
+                <div class="input-field col s6 m4 l2">
                     <input class="value" id="google_username" type="text">
                     <label for="google_username" class="translate active">google_username</label>
                 </div>
-                <div class="input-field col s12 m8 l4">
+                <div class="input-field col s6 m4 l2">
                     <input class="value" id="google_password" type="password">
                     <label for="google_password" class="translate active">google_password</label>
                 </div>
             </div>
             <div class="row">
-                <div class="input-field col s12 m8 l4">
+                <div class="input-field col s8 m5 l2">
                     <input class="value" id="google_verify_email" type="text">
                     <label for="google_verify_email" class="translate active">google_verify_email</label>
                 </div>
-            </div>
-            <div class="row">
-                <div class="input-field col s12 m8 l2">
+                <div class="input-field col s4 m3 l2">
                     <input class="value" id="google_polling_interval" size="5" maxlength="5" type="number">
                     <label for="google_polling_interval" class="translate active">google_polling_interval</label>
                 </div>
             </div>
             <div class="row">
-                <div class="col s12 m8 l4">
+                <div class="col s6 m4 l2">
                     <a id="btn_check_connection" class="waves-effect waves-light btn translate">check_connection</a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col s12 m8 l4 title translate">Cookie Retrieval by Proxy</div>
+            </div>
+            <div class="row">
+                <div class="col s6 m4 l2">
+                    <a id="btn_open_proxy_website" class="waves-effect waves-light btn translate">open proxy website</a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col s12 m8 l4 title translate">Enter Cookie directly</div>
+            </div>
+            <div class="row">
+                <div class="input-field col s12 m8 l4">
+                    <input class="value" id="cookie_string" type="text">
+                    <label for="cookie_string" class="translate active">Cookie-String</label>
                 </div>
             </div>
             <div class="row">
@@ -306,7 +338,7 @@
         <div id="tab-fences" class="col s12 page">
             <div class="col s12" id="values">
                 <a class="btn-floating waves-effect waves-light blue table-button-add"><i class="material-icons">add</i></a>
-                <a id="table-button-search" class="btn-floating waves-effect waves-light blue"><i class="material-icons">search</i><span class="translate">Search</span></a>
+                <a id="table-button-search" class="btn-floating waves-effect waves-light blue"><i class="material-icons">search</i></a>
                 <div class="table-values-div">
                     <table class="table-values" style="width: 100%;">
                         <thead>
